fix: java 1.3 compatibility - Integer.valueOf -> new Integer and flushGraphics exposure
- replace Integer.valueOf(int) which exists only since Java5 with new Integer(int) for CLDC1.1/MIDP2.0 1.3 target
- replace protected flushGraphics calls from helper classes with public wrapper flushGraphicsPublic() to allow cross-class access

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>